--- a/org.eclipse.cdt.cross.arc.gnu.uclibc/plugin.xml
+++ b/org.eclipse.cdt.cross.arc.gnu.uclibc/plugin.xml
@@ -2732,13 +2732,13 @@
             </enumeratedOptionValue>
          </option>
          <option category="org.eclipse.cdt.cross.arc.gnu.uclibc.linux.category.target"
-                 id="org.eclipse.cdt.cross.arc.gnu.uclibc.linux.option.target.endiannes"
+                 id="org.eclipse.cdt.cross.arc.gnu.uclibc.linux.base.option.target.endiannes"
                  isAbstract="false"
                  name="Endianness"
                  superClass="org.eclipse.cdt.cross.arc.gnu.uclibc.base.option.target.endiannes">
             <enumeratedOptionValue
                   command="-mlittle-endian"
-                  id="org.eclipse.cdt.cross.arc.gnu.base.option.target.endiannes.little"
+                  id="org.eclipse.cdt.cross.arc.gnu.700.base.option.target.endiannes.little"
                   name="Little Endian (-mlittle-endian)">
             </enumeratedOptionValue>
          </option>
@@ -3264,13 +3264,13 @@
          </option>
          <option
                category="org.eclipse.cdt.cross.arc.gnu.uclibc.linux.category.target"
-               id="org.eclipse.cdt.cross.arc.gnu.hs.uclibc.linux.option.target.endiannes"
+               id="org.eclipse.cdt.cross.arc.gnu.hs.uclibc.linux.base.option.target.endiannes"
                isAbstract="false"
                name="Endianness"
                superClass="org.eclipse.cdt.cross.arc.gnu.uclibc.base.option.target.endiannes">
             <enumeratedOptionValue
                   command="-mlittle-endian"
-                  id="org.eclipse.cdt.cross.arc.gnu.base.option.target.endiannes.little"
+                  id="org.eclipse.cdt.cross.arc.gnu.hs.uclibc.base.option.target.endiannes.little"
                   name="Little Endian (-mlittle-endian)">
             </enumeratedOptionValue>
          </option>
@@ -3675,13 +3675,13 @@
          </option>
          <option
                category="org.eclipse.cdt.cross.arc.gnu.uclibc.linux.category.target"
-               id="org.eclipse.cdt.cross.arc.gnu.hs.uclibc.linux.option.target.endiannes"
+               id="org.eclipse.cdt.cross.arc.gnu.hs.uclibc.linux.base.option.target.endiannes"
                isAbstract="false"
                name="Endianness"
                superClass="org.eclipse.cdt.cross.arc.gnu.uclibc.base.option.target.endiannes">
             <enumeratedOptionValue
                   command="-mbig-endian"
-                  id="org.eclipse.cdt.cross.arc.gnu.base.option.target.endiannes.big"
+                  id="org.eclipse.cdt.cross.arc.gnu.hs.uclibc.eb.base.option.target.endiannes.big"
                   name="Big Endian (-mbig-endian)">
             </enumeratedOptionValue>
          </option>
@@ -5646,13 +5646,13 @@
          </option>
          <option
                category="org.eclipse.cdt.cross.arc.gnu.uclibc.linux.category.target"
-               id="org.eclipse.cdt.cross.arc.gnu.hs.uclibc.linux.option.target.endiannes"
+               id="org.eclipse.cdt.cross.arc.gnu.hs.uclibc.linux.base.option.target.endiannes"
                isAbstract="false"
                name="Endianness"
                superClass="org.eclipse.cdt.cross.arc.gnu.uclibc.base.option.target.endiannes">
             <enumeratedOptionValue
                   command="-mbig-endian"
-                  id="org.eclipse.cdt.cross.arc.gnu.base.option.target.endiannes.big"
+                  id="org.eclipse.cdt.cross.arc.gnu.700.uclibc.eb.base.option.target.endiannes.big"
                   name="Big Endian (-mbig-endian)">
             </enumeratedOptionValue>
          </option>
