--- a/org.eclipse.cdt.cross.arc.gnu.uclibc/plugin.xml
+++ b/org.eclipse.cdt.cross.arc.gnu.uclibc/plugin.xml
@@ -818,38 +818,6 @@
                </checkBuildProperty>
             </enablement>
          </option>
-         <option id="org.eclipse.cdt.cross.arc.gnu.uclibc.base.option.target.endiannes"
-         		 name="Endianness"
-         		 valueType="enumerated">
-           <enumeratedOptionValue
-                 command="-mlittle-endian"
-                 id="org.eclipse.cdt.cross.arc.gnu.uclibc.base.option.target.endiannes.little"
-                 isDefault="true"
-                 name="Little Endian (-mlittle-endian)"/>
-           <enumeratedOptionValue id="org.eclipse.cdt.cross.arc.gnu.uclibc.base.option.target.endiannes.big"
-           						  name="Big Endian (-mbig-endian)"
-           						  command="-mbig-endian"/>
-           <enablement
-                 attribute="value"
-                 extensionAdjustment="false"
-                 type="CONTAINER_ATTRIBUTE"
-                 value="org.eclipse.cdt.cross.arc.gnu.uclibc.base.option.debugging.level.max">
-              <checkBuildProperty
-                    property="org.eclipse.cdt.build.core.buildType"
-                    value="org.eclipse.cdt.build.core.buildType.debug">
-              </checkBuildProperty>
-           </enablement>
-           <enablement
-                 attribute="value"
-                 extensionAdjustment="false"
-                 type="CONTAINER_ATTRIBUTE"
-                 value="org.eclipse.cdt.cross.arc.gnu.uclibc.base.option.target.endiannes.big">
-              <checkBuildProperty
-                    property="org.eclipse.cdt.build.core.buildType"
-                    value="org.eclipse.cdt.build.core.buildType.release">
-              </checkBuildProperty>
-           </enablement>
-         </option>
          <option
                command="-p"
                defaultValue="false"
@@ -1146,6 +1114,17 @@
                id="org.eclipse.cdt.cross.arc.gnu.uclibc.base.option.target.mpy"
                name="MPY instruction (-mmpy)"
                valueType="boolean">
+         </option>
+         <option
+               id="org.eclipse.cdt.cross.arc.gnu.base.option.target.endiannes"
+               name="Endianness"
+               valueType="enumerated">
+            <enumeratedOptionValue
+                  command="-mlittle-endian"
+                  id="org.eclipse.cdt.cross.arc.gnu.base.option.target.endiannes.little"
+                  isDefault="true"
+                  name="Little Endian (-mlittle-endian)">
+            </enumeratedOptionValue>
          </option>
       </tool>
       <builder
@@ -2731,17 +2710,6 @@
                   name="ARC 700 (-mcpu=arc700)">
             </enumeratedOptionValue>
          </option>
-         <option category="org.eclipse.cdt.cross.arc.gnu.uclibc.linux.category.target"
-                 id="org.eclipse.cdt.cross.arc.gnu.uclibc.linux.base.option.target.endiannes"
-                 isAbstract="false"
-                 name="Endianness"
-                 superClass="org.eclipse.cdt.cross.arc.gnu.uclibc.base.option.target.endiannes">
-            <enumeratedOptionValue
-                  command="-mlittle-endian"
-                  id="org.eclipse.cdt.cross.arc.gnu.700.base.option.target.endiannes.little"
-                  name="Little Endian (-mlittle-endian)">
-            </enumeratedOptionValue>
-         </option>
          <optionCategory
                id="org.eclipse.cdt.cross.arc.gnu.uclibc.linux.category.debugging"
                name="Debugging">
@@ -2993,6 +2961,13 @@
                id="org.eclipse.cdt.cross.arc.gnu.uclibc.linux.option.target.mno-dpfp-lrsr"
                name="Forbid LR and SR to use FPX registers (-mno-dpfp-lrsr)"
                superClass="org.eclipse.cdt.cross.arc.gnu.base.option.target.mno-dpfp-lrsr">
+         </option>
+         <option
+               category="org.eclipse.cdt.cross.arc.gnu.linux.category.target"
+               id="org.eclipse.cdt.cross.arc.gnu.linux.option.target.endiannes"
+               isAbstract="false"
+               name="Endianness"
+               superClass="org.eclipse.cdt.cross.arc.gnu.base.option.target.endiannes">
          </option>
       </toolChain>
       <projectType
@@ -3262,18 +3237,6 @@
                   name="ARC HS (-mcpu=archs)">
             </enumeratedOptionValue>
          </option>
-         <option
-               category="org.eclipse.cdt.cross.arc.gnu.uclibc.linux.category.target"
-               id="org.eclipse.cdt.cross.arc.gnu.hs.uclibc.linux.base.option.target.endiannes"
-               isAbstract="false"
-               name="Endianness"
-               superClass="org.eclipse.cdt.cross.arc.gnu.uclibc.base.option.target.endiannes">
-            <enumeratedOptionValue
-                  command="-mlittle-endian"
-                  id="org.eclipse.cdt.cross.arc.gnu.hs.uclibc.base.option.target.endiannes.little"
-                  name="Little Endian (-mlittle-endian)">
-            </enumeratedOptionValue>
-         </option>
          <optionCategory
                id="org.eclipse.cdt.cross.arc.gnu.uclibc.linux.category.debugging"
                name="Debugging">
@@ -3475,6 +3438,13 @@
                superClass="org.eclipse.cdt.cross.arc.gnu.base.option.target.atomic"
                value="true">
          </option>
+         <option
+               category="org.eclipse.cdt.cross.arc.gnu.linux.category.target"
+               id="org.eclipse.cdt.cross.arc.gnu.linux.option.target.endiannes"
+               isAbstract="false"
+               name="Endianness"
+               superClass="org.eclipse.cdt.cross.arc.gnu.base.option.target.endiannes">
+         </option>
       </toolChain>
       <configuration
             id="org.eclipse.cdt.cross.arc.gnu.uclibc.linux.configuration.base.hs"
@@ -3671,18 +3641,6 @@
                   command="-mcpu=archs"
                   id="org.eclipse.cdt.cross.arc.gnu.uclibc.base.option.mcpu.arcv2hs"
                   name="ARC HS (-mcpu=archs)">
-            </enumeratedOptionValue>
-         </option>
-         <option
-               category="org.eclipse.cdt.cross.arc.gnu.uclibc.linux.category.target"
-               id="org.eclipse.cdt.cross.arc.gnu.hs.uclibc.linux.base.option.target.endiannes"
-               isAbstract="false"
-               name="Endianness"
-               superClass="org.eclipse.cdt.cross.arc.gnu.uclibc.base.option.target.endiannes">
-            <enumeratedOptionValue
-                  command="-mbig-endian"
-                  id="org.eclipse.cdt.cross.arc.gnu.hs.uclibc.eb.base.option.target.endiannes.big"
-                  name="Big Endian (-mbig-endian)">
             </enumeratedOptionValue>
          </option>
          <optionCategory
@@ -3884,6 +3842,18 @@
                name="Atomic functions (-matomic)"
                superClass="org.eclipse.cdt.cross.arc.gnu.base.option.target.atomic"
                value="true">
+         </option>
+         <option
+               category="org.eclipse.cdt.cross.arc.gnu.eb.linux.category.target"
+               id="org.eclipse.cdt.cross.arc.gnu.eb.linux.option.target.endiannes"
+               isAbstract="false"
+               name="Endianness"
+               superClass="org.eclipse.cdt.cross.arc.gnu.base.option.target.endiannes">
+            <enumeratedOptionValue
+                  command="-mbig-endian"
+                  id="org.eclipse.cdt.cross.arc.gnu.base.option.target.endiannes.big"
+                  name="Big Endian (-mbig-endian)">
+            </enumeratedOptionValue>
          </option>
       </toolChain>
       <configuration
@@ -5644,18 +5614,6 @@
                   name="ARC 700 (-mcpu=arc700)">
             </enumeratedOptionValue>
          </option>
-         <option
-               category="org.eclipse.cdt.cross.arc.gnu.uclibc.linux.category.target"
-               id="org.eclipse.cdt.cross.arc.gnu.hs.uclibc.linux.base.option.target.endiannes"
-               isAbstract="false"
-               name="Endianness"
-               superClass="org.eclipse.cdt.cross.arc.gnu.uclibc.base.option.target.endiannes">
-            <enumeratedOptionValue
-                  command="-mbig-endian"
-                  id="org.eclipse.cdt.cross.arc.gnu.700.uclibc.eb.base.option.target.endiannes.big"
-                  name="Big Endian (-mbig-endian)">
-            </enumeratedOptionValue>
-         </option>
          <optionCategory
                id="org.eclipse.cdt.cross.arc.gnu.uclibc.linux.category.debugging"
                name="Debugging">
@@ -5894,6 +5852,18 @@
                id="org.eclipse.cdt.cross.arc.gnu.uclibc.linux.option.target.mno-dpfp-lrsr"
                name="Forbid LR and SR to use FPX registers (-mno-dpfp-lrsr)"
                superClass="org.eclipse.cdt.cross.arc.gnu.base.option.target.mno-dpfp-lrsr">
+         </option>
+         <option
+               category="org.eclipse.cdt.cross.arc.gnu.eb.linux.category.target"
+               id="org.eclipse.cdt.cross.arc.gnu.eb.linux.option.target.endiannes"
+               isAbstract="false"
+               name="Endianness"
+               superClass="org.eclipse.cdt.cross.arc.gnu.base.option.target.endiannes">
+            <enumeratedOptionValue
+                  command="-mbig-endian"
+                  id="org.eclipse.cdt.cross.arc.gnu.base.option.target.endiannes.big"
+                  name="Big Endian (-mbig-endian)">
+            </enumeratedOptionValue>
          </option>
       </toolChain>
       <projectType
