--- a/org.eclipse.cdt.cross.arc.gnu/templates/projecttemplates/EMSK_HelloWorld_C_Project/template.properties
+++ b/org.eclipse.cdt.cross.arc.gnu/templates/projecttemplates/EMSK_HelloWorld_C_Project/template.properties
@@ -11,8 +11,8 @@
 ###############################################################################
 
 #Template Default Values
-EMSK_HelloWorld.Ctemplate.label=Hello World for EM SK Project
-EMSK_HelloWorld.Ctemplate.description=A skeletal Managed C Hello World project for EM Starter Kit. Creates a folder for sources and another for include.
+EMSK_HelloWorld.Ctemplate.label=Hello World for EM SK 1.1 Project
+EMSK_HelloWorld.Ctemplate.description=A skeletal Managed C Hello World project for EM Starter Kit 1.1. Creates a folder for sources and another for include.
 EMSK_HelloWorld.basics.label=Basic Settings
 EMSK_HelloWorld.basics.description=Basic properties of a project
 EMSK_HelloWorld.author.label=Author
