9000857592 Append D-suffix to EM5D and EM7D
Signed-off-by: Anton Kolesov <Anton.Kolesov@synopsys.com>

--- a/org.eclipse.cdt.cross.arc.gnu/templates/projecttemplates/EM5_Empty_CPP_Project/template.properties
+++ b/org.eclipse.cdt.cross.arc.gnu/templates/projecttemplates/EM5_Empty_CPP_Project/template.properties
@@ -11,8 +11,8 @@
 ###############################################################################
 
 #Template Default Values
-Emptyem5.CCtemplate.label=Empty C++ Project For EM SK EM5
-Emptyem5.CCtemplate.description=A skeletal Managed C++ project for EM Starter Kit EM5. Creates a folder for sources and contains linker script and start file.
+Emptyem5.CCtemplate.label=Empty C++ Project For EM SK EM5D
+Emptyem5.CCtemplate.description=A skeletal Managed C++ project for EM Starter Kit EM5D. Creates a folder for sources and contains linker script and start file.
 Emptyem5.basics.label=Basic Settings
 Emptyem5.basics.description=Basic properties of a project
 Emptyem5.sourceDir.label=Source
