--- a/org.eclipse.cdt.cross.arc.gnu/templates/projecttemplates/EM5_Empty_C_Project/template.properties
+++ b/org.eclipse.cdt.cross.arc.gnu/templates/projecttemplates/EM5_Empty_C_Project/template.properties
@@ -11,7 +11,7 @@
 ###############################################################################
 
 #Template Default Values
-Emptyem5.Ctemplate.label=Empty Project For EM SK EM5
-Emptyem5.Ctemplate.description=A skeletal Managed C project for EM Starter Kit EM5. Creates a folder for sources and contains linker script and start file.
+Emptyem5.Ctemplate.label=Empty Project For EM SK EM5D
+Emptyem5.Ctemplate.description=A skeletal Managed C project for EM Starter Kit EM5D. Creates a folder for sources and contains linker script and start file.
 Emptyem5.basics.label=Basic Settings
 Emptyem5.basics.description=Basic properties of a project
