Make std  default
Signed-off-by: Yunlu Zhang <Yunlu.Zhang@synopsys.com>

--- a/org.eclipse.cdt.cross.arc.gnu/plugin.xml
+++ b/org.eclipse.cdt.cross.arc.gnu/plugin.xml
@@ -1143,6 +1143,7 @@
          <enumeratedOptionValue
                command="-mabi=std"
                id="org.eclipse.cdt.cross.arc.gnu.base.option.target.abiselection.std"
+               isDefault="true"
                name="Standard ABI (-mabi=std)">
          </enumeratedOptionValue>
          <enumeratedOptionValue
@@ -4074,8 +4075,7 @@
                commandGenerator="org.eclipse.cdt.cross.arc.gnu.ARCManagedCommandLineGenerator"
                id="org.eclipse.cdt.cross.arc.gnu.hs.linux.option.target.abiselection"
                name="ABI selection "
-               superClass="org.eclipse.cdt.cross.arc.gnu.base.option.target.abiselection"
-               value="true">
+               superClass="org.eclipse.cdt.cross.arc.gnu.base.option.target.abiselection">
          </option>
          <option
                applicabilityCalculator="com.arc.cdt.toolchain.arc.ArcApplicabilityCalculator"
@@ -5350,10 +5350,10 @@
          <option
                applicabilityCalculator="com.arc.cdt.toolchain.arc.ArcApplicabilityCalculator"
                category="org.eclipse.cdt.cross.arc.gnu.eb.linux.category.target"
+               commandGenerator="org.eclipse.cdt.cross.arc.gnu.ARCManagedCommandLineGenerator"
                id="org.eclipse.cdt.cross.arc.gnu.hs.eb.linux.option.target.abiselection"
                name="ABI selection "
-               superClass="org.eclipse.cdt.cross.arc.gnu.base.option.target.abiselection"
-               value="true">
+               superClass="org.eclipse.cdt.cross.arc.gnu.base.option.target.abiselection">
          </option>
       </toolChain>
       <configuration
