Add abi selection for uclibc
Signed-off-by: Yunlu Zhang <Yunlu.Zhang@synopsys.com>

--- a/org.eclipse.cdt.cross.arc.gnu.uclibc/plugin.xml
+++ b/org.eclipse.cdt.cross.arc.gnu.uclibc/plugin.xml
@@ -1125,6 +1125,24 @@
                   name="Little Endian (-mlittle-endian)">
             </enumeratedOptionValue>
          </option>
+         <option
+               applicabilityCalculator="com.arc.cdt.toolchain.arc.ArcApplicabilityCalculator"
+               commandGenerator="org.eclipse.cdt.cross.arc.gnu.ARCManagedCommandLineGenerator"
+               id="org.eclipse.cdt.cross.arc.gnu.uclibc.base.option.target.abiselection"
+               name="ABI selection "
+               valueType="enumerated">
+            <enumeratedOptionValue
+                  command="-mabi=std"
+                  id="org.eclipse.cdt.cross.arc.gnu.base.option.target.abiselection.std"
+                  isDefault="true"
+                  name="Standard ABI (-mabi=std)">
+            </enumeratedOptionValue>
+            <enumeratedOptionValue
+                  command="-mabi=mwabi"
+                  id="org.eclipse.cdt.cross.arc.gnu.base.option.target.abiselection.mwabi"
+                  name="MW-compatible ABI (-mabi=mwabi)">
+            </enumeratedOptionValue>
+         </option>
       </tool>
       <builder
             command="make"
@@ -3439,6 +3457,14 @@
                superClass="org.eclipse.cdt.cross.arc.gnu.base.option.target.atomic"
                value="true">
          </option>
+         <option
+               applicabilityCalculator="com.arc.cdt.toolchain.arc.ArcApplicabilityCalculator"
+               category="org.eclipse.cdt.cross.arc.gnu.uclibc.linux.category.target"
+               commandGenerator="org.eclipse.cdt.cross.arc.gnu.ARCManagedCommandLineGenerator"
+               id="org.eclipse.cdt.cross.arc.gnu.hs.uclibc.linux.option.target.abiselection"
+               name="ABI selection "
+               superClass="org.eclipse.cdt.cross.arc.gnu.uclibc.base.option.target.abiselection">
+         </option>
       </toolChain>
       <configuration
             id="org.eclipse.cdt.cross.arc.gnu.uclibc.linux.configuration.base.hs"
@@ -3838,6 +3864,14 @@
                name="Atomic functions (-matomic)"
                superClass="org.eclipse.cdt.cross.arc.gnu.base.option.target.atomic"
                value="true">
+         </option>
+         <option
+               applicabilityCalculator="com.arc.cdt.toolchain.arc.ArcApplicabilityCalculator"
+               category="org.eclipse.cdt.cross.arc.gnu.uclibc.linux.category.target"
+               commandGenerator="org.eclipse.cdt.cross.arc.gnu.ARCManagedCommandLineGenerator"
+               id="org.eclipse.cdt.cross.arc.gnu.hs.eb.uclibc.linux.option.target.abiselection"
+               name="ABI selection "
+               superClass="org.eclipse.cdt.cross.arc.gnu.uclibc.base.option.target.abiselection">
          </option>
       </toolChain>
       <configuration
