--- a/org.eclipse.cdt.cross.arc.gnu/plugin.xml
+++ b/org.eclipse.cdt.cross.arc.gnu/plugin.xml
@@ -7385,5 +7385,29 @@
 
 
    </extension>
+   <extension
+         point="org.eclipse.cdt.core.LanguageSettingsProvider">
+            <provider
+            class="com.arc.cdt.toolchain.arc.language.settings.providers.ArcgnugccBuiltinSpecsDetector"
+            id="com.arc.cdt.toolchain.arc.language.settings.providers.ArcgnugccBuiltinSpecsDetector"
+            name="ARC GNU GCC Built-in Compiler Settings"
+            parameter="arc-elf32-gcc ${FLAGS}"
+            prefer-non-shared="true">
+         <language-scope
+               id="org.eclipse.cdt.core.gcc">
+         </language-scope>
+         <language-scope
+               id="org.eclipse.cdt.core.g++">
+         </language-scope>
+      </provider>
+      <provider
+            class="com.arc.cdt.toolchain.arc.language.settings.providers.ArcgnugccBuildCommandParser"
+            id="com.arc.cdt.toolchain.arc.language.settings.providers.ArcgnugccBuildCommandParser"
+            name="ARC GNU GCC  Build Output Parser"
+            parameter="arc-elf32-gcc"
+            prefer-non-shared="true">
+      </provider>
+      
+   </extension>
 
 </plugin>
